--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
 blinker==1.4
 click==6.6
+ecdsa==0.13
+feedgenerator==1.8
+future==0.15.2
 Jinja2==2.8
 libsass==0.11.1
+livereload==2.4.1
 Markdown==2.6.6
 MarkupSafe==0.23
+paramiko==1.17.1
 pilkit==1.1.13
 Pillow==3.3.0
 proselint==0.6.1
+pycrypto==2.6.1
+pytz==2016.6.1
 sigal==1.2.0
 six==1.10.0
+tornado==4.4
 wheel==0.26.0
