--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "bourbon": "^4.2.7",
     "neat": "^1.8.0",
-    "bitters": "^1.3.2"
+    "bitters": "^1.3.2",
+    "modular-scale": "^2.1.3"
   }
 }
